FIX wrong color used on menu hover

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -2,6 +2,8 @@
   --font-default: "DM Sans", Arial, Helvetica, sans-serif;
   --font-slab: var(--font-default);
   --modal-duration: 0.8s;
+
+  --red: #fe142f;
 }
 * {
   box-sizing: border-box;
@@ -53,13 +55,13 @@ img {
 }
 
 .topnav a:hover {
-  background-color: #ff0000;
+  background-color: var(--red);
   color: #ffffff;
   border-radius: 15px;
 }
 
 .topnav a.active {
-  background-color: #ff0000;
+  background-color: var(--red);
   color: #ffffff;
   border-radius: 15px;
 }
@@ -119,7 +121,7 @@ main {
 
 .modal-btn {
   font-size: 145%;
-  background: #fe142f;
+  background: var(--red);
   display: flex;
   margin: auto;
   padding: 2em;
@@ -142,7 +144,7 @@ main {
 /* Modal form */
 
 .button {
-  background: #fe142f;
+  background: var(--red);
   margin-top: 0.5em;
   padding: 1em;
   color: #fff;
@@ -332,7 +334,7 @@ input[data-error]::after {
 .btn-submit,
 .btn-signup,
 .btn-close-success {
-  background: #fe142f;
+  background: var(--red);
   display: block;
   margin: 0 auto;
   border-radius: 7px;
@@ -504,7 +506,7 @@ input[data-error]::after {
   padding: 0;
 }
 .copyrights {
-  color: #fe142f;
+  color: var(--red);
   padding: 0;
   font-size: 1rem;
   margin: 60px 0 30px;
